--- a/notebooks/Electroencephalography (EEG) Signal Classification using Deep Learning.ipynb
+++ b/notebooks/Electroencephalography (EEG) Signal Classification using Deep Learning.ipynb
@@ -39,6 +39,7 @@
    "source": [
     "import numpy as np\n",
     "from keras.utils import to_categorical\n",
+    "from keras.callbacks import EarlyStopping\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
@@ -342,7 +343,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['StimulusCode', 'StimulusType', 'Signal', 'TargetChar', 'Flashing'])"
+       "dict_keys(['TargetChar', 'Flashing', 'Signal', 'StimulusCode', 'StimulusType'])"
       ]
      },
      "execution_count": 9,
@@ -362,7 +363,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['StimulusCode', 'Signal', 'Flashing'])"
+       "dict_keys(['Flashing', 'Signal', 'StimulusCode'])"
       ]
      },
      "execution_count": 10,
@@ -437,7 +438,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['targetchar', 'code', 'signal', 'label'])"
+       "dict_keys(['code', 'signal', 'label', 'targetchar'])"
       ]
      },
      "execution_count": 14,
@@ -499,11 +500,7 @@
      "output_type": "stream",
      "text": [
       "(85, 15, 12)\n",
-      "['E' 'A' 'E' 'V' 'Q' 'T' 'D' 'O' 'J' 'G' '8' 'R' 'B' 'R' 'G' 'O' 'N' 'C'\n",
-      " 'E' 'D' 'H' 'C' 'T' 'U' 'I' 'D' 'B' 'P' 'U' 'H' 'M' 'E' 'M' '6' 'O' 'U'\n",
-      " 'X' 'O' 'C' 'F' 'O' 'U' 'K' 'W' 'A' '4' 'V' 'J' 'E' 'F' 'R' 'Z' 'R' 'O'\n",
-      " 'L' 'H' 'Y' 'N' 'Q' 'D' 'W' '_' 'E' 'K' 'T' 'L' 'B' 'W' 'X' 'E' 'P' 'O'\n",
-      " 'U' 'I' 'K' 'Z' 'E' 'R' 'Y' 'O' 'O' 'T' 'H' 'Q' 'I']\n",
+      "(85,)\n",
       "(85, 15, 12)\n"
      ]
     }
@@ -531,8 +528,9 @@
     "    lowcut = 0.1\n",
     "    highcut = 20\n",
     "    order = 5\n",
+    "    FS_subsampled = int(FS/subsample_interval)\n",
     "    d['signal'] = butter_bandpass_filter(d['signal'], lowcut, highcut,\n",
-    "                                             int(FS/subsample_interval), order, -1)\n",
+    "                                             FS_subsampled, order, -1)\n",
     "\n",
     "    d['signal'] = standardize_along(d['signal'], -1).reshape([-1, NUM_ELECTRODES, \n",
     "                                                            d['signal'].shape[-1], 1])\n"
@@ -645,11 +643,213 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.models.PAMI import CNN_P300_PAMI\n",
+    "model = CNN_P300_PAMI(train['signal'].shape[1:])\n",
+    "model.compile(optimizer = 'sgd',loss = 'binary_crossentropy',metrics = ['acc', 'mse'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "earlystopping = EarlyStopping(monitor = \"val_mean_squared_error\",patience = 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 14535 samples, validate on 765 samples\n",
+      "Epoch 1/1000\n",
+      "14535/14535 [==============================] - 17s - loss: 0.4536 - acc: 0.8320 - mean_squared_error: 0.1404 - val_loss: 0.4467 - val_acc: 0.8327 - val_mean_squared_error: 0.1379\n",
+      "Epoch 2/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.4428 - acc: 0.8334 - mean_squared_error: 0.1367 - val_loss: 0.4422 - val_acc: 0.8327 - val_mean_squared_error: 0.1366\n",
+      "Epoch 3/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.4381 - acc: 0.8334 - mean_squared_error: 0.1354 - val_loss: 0.4388 - val_acc: 0.8327 - val_mean_squared_error: 0.1355\n",
+      "Epoch 4/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.4340 - acc: 0.8334 - mean_squared_error: 0.1342 - val_loss: 0.4346 - val_acc: 0.8327 - val_mean_squared_error: 0.1344\n",
+      "Epoch 5/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.4296 - acc: 0.8334 - mean_squared_error: 0.1329 - val_loss: 0.4301 - val_acc: 0.8327 - val_mean_squared_error: 0.1330\n",
+      "Epoch 6/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.4240 - acc: 0.8334 - mean_squared_error: 0.1312 - val_loss: 0.4243 - val_acc: 0.8327 - val_mean_squared_error: 0.1311\n",
+      "Epoch 7/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.4170 - acc: 0.8334 - mean_squared_error: 0.1291 - val_loss: 0.4175 - val_acc: 0.8327 - val_mean_squared_error: 0.1291\n",
+      "Epoch 8/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.4093 - acc: 0.8333 - mean_squared_error: 0.1268 - val_loss: 0.4104 - val_acc: 0.8307 - val_mean_squared_error: 0.1268\n",
+      "Epoch 9/1000\n",
+      "14535/14535 [==============================] - 9s - loss: 0.4023 - acc: 0.8340 - mean_squared_error: 0.1246 - val_loss: 0.4047 - val_acc: 0.8333 - val_mean_squared_error: 0.1249\n",
+      "Epoch 10/1000\n",
+      "14535/14535 [==============================] - 10s - loss: 0.3964 - acc: 0.8356 - mean_squared_error: 0.1227 - val_loss: 0.4003 - val_acc: 0.8340 - val_mean_squared_error: 0.1236\n",
+      "Epoch 11/1000\n",
+      "14535/14535 [==============================] - 11s - loss: 0.3921 - acc: 0.8365 - mean_squared_error: 0.1213 - val_loss: 0.3958 - val_acc: 0.8392 - val_mean_squared_error: 0.1221\n",
+      "Epoch 12/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.3885 - acc: 0.8385 - mean_squared_error: 0.1201 - val_loss: 0.3926 - val_acc: 0.8418 - val_mean_squared_error: 0.1210\n",
+      "Epoch 13/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3852 - acc: 0.8396 - mean_squared_error: 0.1189 - val_loss: 0.3902 - val_acc: 0.8373 - val_mean_squared_error: 0.1204\n",
+      "Epoch 14/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3824 - acc: 0.8406 - mean_squared_error: 0.1180 - val_loss: 0.3874 - val_acc: 0.8412 - val_mean_squared_error: 0.1194\n",
+      "Epoch 15/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3798 - acc: 0.8413 - mean_squared_error: 0.1171 - val_loss: 0.3851 - val_acc: 0.8392 - val_mean_squared_error: 0.1186\n",
+      "Epoch 16/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3775 - acc: 0.8429 - mean_squared_error: 0.1163 - val_loss: 0.3818 - val_acc: 0.8444 - val_mean_squared_error: 0.1175\n",
+      "Epoch 17/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.3746 - acc: 0.8440 - mean_squared_error: 0.1153 - val_loss: 0.3800 - val_acc: 0.8451 - val_mean_squared_error: 0.1169\n",
+      "Epoch 18/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3722 - acc: 0.8456 - mean_squared_error: 0.1145 - val_loss: 0.3778 - val_acc: 0.8412 - val_mean_squared_error: 0.1162\n",
+      "Epoch 19/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3698 - acc: 0.8454 - mean_squared_error: 0.1137 - val_loss: 0.3752 - val_acc: 0.8529 - val_mean_squared_error: 0.1153\n",
+      "Epoch 20/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3677 - acc: 0.8470 - mean_squared_error: 0.1130 - val_loss: 0.3733 - val_acc: 0.8458 - val_mean_squared_error: 0.1147\n",
+      "Epoch 21/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3654 - acc: 0.8481 - mean_squared_error: 0.1123 - val_loss: 0.3716 - val_acc: 0.8412 - val_mean_squared_error: 0.1142\n",
+      "Epoch 22/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3635 - acc: 0.8493 - mean_squared_error: 0.1116 - val_loss: 0.3695 - val_acc: 0.8444 - val_mean_squared_error: 0.1134\n",
+      "Epoch 23/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3619 - acc: 0.8503 - mean_squared_error: 0.1111 - val_loss: 0.3697 - val_acc: 0.8412 - val_mean_squared_error: 0.1136\n",
+      "Epoch 24/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3602 - acc: 0.8511 - mean_squared_error: 0.1104 - val_loss: 0.3678 - val_acc: 0.8458 - val_mean_squared_error: 0.1130\n",
+      "Epoch 25/1000\n",
+      "14535/14535 [==============================] - 9s - loss: 0.3586 - acc: 0.8514 - mean_squared_error: 0.1100 - val_loss: 0.3675 - val_acc: 0.8451 - val_mean_squared_error: 0.1127\n",
+      "Epoch 26/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3576 - acc: 0.8519 - mean_squared_error: 0.1096 - val_loss: 0.3669 - val_acc: 0.8444 - val_mean_squared_error: 0.1128\n",
+      "Epoch 27/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3563 - acc: 0.8528 - mean_squared_error: 0.1092 - val_loss: 0.3671 - val_acc: 0.8484 - val_mean_squared_error: 0.1125\n",
+      "Epoch 28/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3555 - acc: 0.8529 - mean_squared_error: 0.1089 - val_loss: 0.3649 - val_acc: 0.8451 - val_mean_squared_error: 0.1119\n",
+      "Epoch 29/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3541 - acc: 0.8534 - mean_squared_error: 0.1084 - val_loss: 0.3661 - val_acc: 0.8464 - val_mean_squared_error: 0.1122\n",
+      "Epoch 30/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3536 - acc: 0.8538 - mean_squared_error: 0.1082 - val_loss: 0.3636 - val_acc: 0.8523 - val_mean_squared_error: 0.1115\n",
+      "Epoch 31/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3527 - acc: 0.8546 - mean_squared_error: 0.1079 - val_loss: 0.3631 - val_acc: 0.8549 - val_mean_squared_error: 0.1112\n",
+      "Epoch 32/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3514 - acc: 0.8548 - mean_squared_error: 0.1076 - val_loss: 0.3619 - val_acc: 0.8523 - val_mean_squared_error: 0.1108\n",
+      "Epoch 33/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3507 - acc: 0.8555 - mean_squared_error: 0.1073 - val_loss: 0.3619 - val_acc: 0.8510 - val_mean_squared_error: 0.1106\n",
+      "Epoch 34/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3501 - acc: 0.8550 - mean_squared_error: 0.1072 - val_loss: 0.3626 - val_acc: 0.8477 - val_mean_squared_error: 0.1109\n",
+      "Epoch 35/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.3493 - acc: 0.8561 - mean_squared_error: 0.1068 - val_loss: 0.3619 - val_acc: 0.8503 - val_mean_squared_error: 0.1107\n",
+      "Epoch 36/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.3479 - acc: 0.8564 - mean_squared_error: 0.1065 - val_loss: 0.3615 - val_acc: 0.8510 - val_mean_squared_error: 0.1104\n",
+      "Epoch 37/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.3475 - acc: 0.8569 - mean_squared_error: 0.1062 - val_loss: 0.3609 - val_acc: 0.8490 - val_mean_squared_error: 0.1101\n",
+      "Epoch 38/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.3470 - acc: 0.8574 - mean_squared_error: 0.1061 - val_loss: 0.3612 - val_acc: 0.8523 - val_mean_squared_error: 0.1103\n",
+      "Epoch 39/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3460 - acc: 0.8580 - mean_squared_error: 0.1059 - val_loss: 0.3616 - val_acc: 0.8464 - val_mean_squared_error: 0.1104\n",
+      "Epoch 40/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3456 - acc: 0.8584 - mean_squared_error: 0.1056 - val_loss: 0.3599 - val_acc: 0.8471 - val_mean_squared_error: 0.1100\n",
+      "Epoch 41/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3447 - acc: 0.8589 - mean_squared_error: 0.1054 - val_loss: 0.3597 - val_acc: 0.8477 - val_mean_squared_error: 0.1098\n",
+      "Epoch 42/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3438 - acc: 0.8581 - mean_squared_error: 0.1049 - val_loss: 0.3597 - val_acc: 0.8464 - val_mean_squared_error: 0.1098\n",
+      "Epoch 43/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3433 - acc: 0.8579 - mean_squared_error: 0.1049 - val_loss: 0.3599 - val_acc: 0.8497 - val_mean_squared_error: 0.1097\n",
+      "Epoch 44/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3430 - acc: 0.8583 - mean_squared_error: 0.1049 - val_loss: 0.3612 - val_acc: 0.8497 - val_mean_squared_error: 0.1103\n",
+      "Epoch 45/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3423 - acc: 0.8594 - mean_squared_error: 0.1045 - val_loss: 0.3597 - val_acc: 0.8523 - val_mean_squared_error: 0.1094\n",
+      "Epoch 46/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3416 - acc: 0.8591 - mean_squared_error: 0.1043 - val_loss: 0.3593 - val_acc: 0.8477 - val_mean_squared_error: 0.1096\n",
+      "Epoch 47/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3406 - acc: 0.8599 - mean_squared_error: 0.1040 - val_loss: 0.3612 - val_acc: 0.8536 - val_mean_squared_error: 0.1098\n",
+      "Epoch 48/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3405 - acc: 0.8600 - mean_squared_error: 0.1040 - val_loss: 0.3590 - val_acc: 0.8458 - val_mean_squared_error: 0.1094\n",
+      "Epoch 49/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3399 - acc: 0.8606 - mean_squared_error: 0.1037 - val_loss: 0.3596 - val_acc: 0.8497 - val_mean_squared_error: 0.1096\n",
+      "Epoch 50/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3394 - acc: 0.8615 - mean_squared_error: 0.1036 - val_loss: 0.3595 - val_acc: 0.8464 - val_mean_squared_error: 0.1094\n",
+      "Epoch 51/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3384 - acc: 0.8598 - mean_squared_error: 0.1032 - val_loss: 0.3605 - val_acc: 0.8477 - val_mean_squared_error: 0.1097\n",
+      "Epoch 52/1000\n",
+      "14535/14535 [==============================] - 8s - loss: 0.3382 - acc: 0.8608 - mean_squared_error: 0.1032 - val_loss: 0.3599 - val_acc: 0.8536 - val_mean_squared_error: 0.1093\n",
+      "Epoch 53/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3375 - acc: 0.8612 - mean_squared_error: 0.1030 - val_loss: 0.3596 - val_acc: 0.8529 - val_mean_squared_error: 0.1090\n",
+      "Epoch 54/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3374 - acc: 0.8610 - mean_squared_error: 0.1029 - val_loss: 0.3615 - val_acc: 0.8471 - val_mean_squared_error: 0.1096\n",
+      "Epoch 55/1000\n",
+      "14535/14535 [==============================] - 7s - loss: 0.3369 - acc: 0.8605 - mean_squared_error: 0.1029 - val_loss: 0.3581 - val_acc: 0.8510 - val_mean_squared_error: 0.1087\n",
+      "Epoch 56/1000\n",
+      "14535/14535 [==============================] - 6s - loss: 0.3363 - acc: 0.8605 - mean_squared_error: 0.1026 - val_loss: 0.3585 - val_acc: 0.8529 - val_mean_squared_error: 0.1090\n",
+      "Epoch 57/1000\n",
+      "14535/14535 [==============================] - 5s - loss: 0.3358 - acc: 0.8622 - mean_squared_error: 0.1024 - val_loss: 0.3589 - val_acc: 0.8490 - val_mean_squared_error: 0.1086\n",
+      "Epoch 58/1000\n",
+      "14535/14535 [==============================] - 5s - loss: 0.3356 - acc: 0.8612 - mean_squared_error: 0.1023 - val_loss: 0.3581 - val_acc: 0.8503 - val_mean_squared_error: 0.1085\n",
+      "Epoch 59/1000\n",
+      "14535/14535 [==============================] - 5s - loss: 0.3349 - acc: 0.8615 - mean_squared_error: 0.1021 - val_loss: 0.3609 - val_acc: 0.8451 - val_mean_squared_error: 0.1092\n",
+      "Epoch 60/1000\n",
+      "14535/14535 [==============================] - 5s - loss: 0.3341 - acc: 0.8618 - mean_squared_error: 0.1020 - val_loss: 0.3617 - val_acc: 0.8510 - val_mean_squared_error: 0.1101\n",
+      "Epoch 61/1000\n",
+      "14535/14535 [==============================] - 5s - loss: 0.3336 - acc: 0.8625 - mean_squared_error: 0.1017 - val_loss: 0.3607 - val_acc: 0.8529 - val_mean_squared_error: 0.1091\n",
+      "Epoch 62/1000\n",
+      "14535/14535 [==============================] - 5s - loss: 0.3332 - acc: 0.8625 - mean_squared_error: 0.1016 - val_loss: 0.3613 - val_acc: 0.8425 - val_mean_squared_error: 0.1098\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x1c515a09ef0>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.fit(x = X_train, y = y_train, batch_size=32, epochs = 1000, callbacks = [earlystopping], \n",
+    "              validation_data = [X_val,y_val])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Testing"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'A_test' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-28-724a5a210196>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msrc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpipelines\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPARADIGM\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtesting_pipeline\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m model_PAMI_scores = testing_pipeline(A_test['signal'],A_test['code'],model_PAMI,\"all\",PARADIGM,\n\u001b[0m\u001b[1;32m      3\u001b[0m                                     A_test_true_letters)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'A_test' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from src.pipelines import PARADIGM, testing_pipeline\n",
+    "model_PAMI_scores = testing_pipeline(A_test['signal'],A_test['code'],model_PAMI,\"all\",PARADIGM,\n",
+    "                                    A_test_true_letters)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
