--- a/notebooks/Electroencephalography (EEG) Signal Classification using Deep Learning.ipynb
+++ b/notebooks/Electroencephalography (EEG) Signal Classification using Deep Learning.ipynb
@@ -846,6 +846,363 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 15, 12)"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['code'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['code', 'signal'])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18000, 64, 78, 1)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['signal'].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = model.predict(test['signal'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(18000, 2)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.9815497 , 0.01674833], dtype=float32)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prediction[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = prediction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01674833, 0.02458237, 0.03127092, ..., 0.28879926, 0.01601532,\n",
+       "       0.33779472], dtype=float32)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.delete(predictions, 0, -1).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_drop =  np.delete(predictions, 0, -1).squeeze()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions_shape = predictions_drop.reshape([-1, NUM_REPEAT, NUM_ROWCOLS])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 15, 12)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_shape.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 8.,  4.,  6., ..., 12.,  9.,  3.],\n",
+       "        [ 6.,  4.,  3., ...,  9., 12.,  5.],\n",
+       "        [ 7., 12., 10., ...,  8.,  9., 11.],\n",
+       "        ...,\n",
+       "        [ 4.,  8.,  2., ...,  6.,  3., 10.],\n",
+       "        [ 4., 12.,  8., ...,  6.,  1., 10.],\n",
+       "        [ 1.,  8., 12., ..., 10.,  2.,  5.]],\n",
+       "\n",
+       "       [[ 7., 10.,  1., ...,  3.,  2.,  8.],\n",
+       "        [ 1.,  7.,  9., ...,  4.,  6.,  2.],\n",
+       "        [ 5.,  8., 12., ...,  9.,  4., 10.],\n",
+       "        ...,\n",
+       "        [11.,  2.,  4., ...,  7.,  1.,  3.],\n",
+       "        [ 7.,  4., 11., ...,  8.,  9.,  2.],\n",
+       "        [ 9.,  2.,  7., ..., 12., 10.,  8.]],\n",
+       "\n",
+       "       [[12.,  1., 11., ...,  3.,  4.,  8.],\n",
+       "        [ 6.,  4., 12., ...,  9., 11.,  1.],\n",
+       "        [ 7.,  9.,  3., ...,  2.,  1.,  8.],\n",
+       "        ...,\n",
+       "        [ 1.,  3., 11., ...,  5.,  2.,  7.],\n",
+       "        [10.,  5.,  4., ...,  9.,  6.,  1.],\n",
+       "        [ 7.,  1., 12., ...,  6., 11.,  4.]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[ 8.,  2.,  1., ..., 12., 11.,  9.],\n",
+       "        [ 2.,  5.,  9., ..., 12.,  8., 11.],\n",
+       "        [ 1.,  2.,  7., ...,  8.,  5., 11.],\n",
+       "        ...,\n",
+       "        [ 6., 11.,  3., ...,  2.,  9., 10.],\n",
+       "        [11., 10.,  7., ...,  3.,  1.,  2.],\n",
+       "        [ 5., 10.,  1., ...,  9.,  6.,  7.]],\n",
+       "\n",
+       "       [[12.,  1.,  7., ...,  4.,  9., 10.],\n",
+       "        [ 6.,  9., 11., ...,  7., 10., 12.],\n",
+       "        [ 1.,  8.,  4., ...,  9.,  6., 12.],\n",
+       "        ...,\n",
+       "        [10., 12.,  2., ..., 11.,  3.,  7.],\n",
+       "        [12.,  5.,  6., ...,  4., 11.,  9.],\n",
+       "        [ 7., 11., 12., ...,  1.,  4.,  9.]],\n",
+       "\n",
+       "       [[ 9.,  3., 10., ..., 11., 12.,  2.],\n",
+       "        [ 9.,  4.,  5., ...,  2.,  1.,  3.],\n",
+       "        [ 6.,  2.,  1., ...,  7.,  3.,  5.],\n",
+       "        ...,\n",
+       "        [ 3.,  2.,  8., ...,  6., 12.,  1.],\n",
+       "        [10.,  7., 12., ...,  8.,  4.,  1.],\n",
+       "        [11.,  1.,  2., ...,  3.,  8.,  5.]]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['code']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.01674833, 0.02458237, 0.03127092, 0.43492505, 0.04534062,\n",
+       "       0.13254842, 0.21557802, 0.00332186, 0.5406512 , 0.09613787,\n",
+       "       0.01605796, 0.02446084], dtype=float32)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predictions_shape[0, 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp = np.argmax(predictions_shape, -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 15)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp[0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(100, 15, 15, 12)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['code'][temp].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.data.extract_data import read_true_letters\n",
+    "answer = read_true_letters(DATA_DIR+\"A_test_labels.txt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.data.paradigm import PARADIGM\n",
+    "model_PAMI_scores = testing_pipeline(test['signal'],test['code'],model,\"all\",PARADIGM,\n",
+    "                                    answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
